# DeskCrafter

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  setup.sh
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ActionWorkspace.tsx  (+10 more)
apps/site/: eslint.config.js  package.json  tsconfig.tsbuildinfo
apps/site/app/: globals.css  layout.tsx  page.tsx
apps/site/components/: AmbientBackground.tsx  ArchitectureVisualizer.tsx  BootSequence.tsx  Button.tsx  CommandPalette.tsx  CustomCursor.tsx  DiagnosticDashboard.tsx  Magnetic.tsx  ParticleCanvas.tsx  ScrollToTop.tsx  SpotlightCard.tsx  StickyFeatureScroll.tsx
apps/site/lib/: site-content.ts
apps/web/: STYLE_GUIDE.md  next.config.ts  package.json  vitest.config.ts
cli/: __init__.py  main.py
cli/config/: __init__.py  config.py
cli/logic/: desktop_entry.py
cli/ui/: main_window.py  style.qss
cli/utils/: utils.py
crates/core/: Cargo.toml
crates/core/src/: desktop_entry.rs  error.rs  icons.rs  inspectors.rs  launcher_library.rs  lib.rs  platform.rs  safety.rs  tools.rs  types.rs
crates/core/tests/: launcher_library.rs  tool_registry.rs
docs/: architecture.md  backend-contracts.md  development.md  frontend-theme.md  packaging.md  product-scope.md  testing.md  tool-specs.md
scripts/: normalize-next-env.js  run-cargo.js
(+36 files in other folders)
