[workspace]
members = [
  "crates/core",
  "apps/desktop/src-tauri"
]
default-members = ["crates/core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/DhanushSantosh/DeskCrafter"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
